Add comments to system_upgrades.yml